# FrigoAi

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
Backend/: Dockerfile.Backend  go.mod
Backend/cmd/: main.go
Backend/internal/: db.go
Backend/internal/services/: core.go  cors.go  handler.go  models.go  services.go  units.go
Frontend/: Dockerfile.Frontend  package.json  pnpm-lock.yaml
Frontend/app/: page.tsx
Frontend/app/_comps/: fetch.tsx  rounded_btn.jsx
Frontend/app/add-recipe/: page.tsx
src/gpt_frigo/: crew.py  main.py
src/gpt_frigo/config/: agents.yaml  tasks.yaml
